--- a/tasks/create_intermediate_csr.yml
+++ b/tasks/create_intermediate_csr.yml
@@ -1,6 +1,7 @@
 ---
 - name: Create the Intermediate CA Certificate Signing Request
   become: yes
+  become_user: "{{ user }}"
   shell: > 
     openssl req
     -new
@@ -14,6 +15,7 @@
 
 - name: Set permissions on Intermediate CA CSR
   become: yes
+  become_user: "{{ user }}"
   file:
     path: "{{ ca_dir }}/{{ ca_int_dir }}/private/{{ int_key }}"
     state: file
