--- a/tasks/create_intermediate_key.yml
+++ b/tasks/create_intermediate_key.yml
@@ -1,6 +1,7 @@
 ---
 - name: Create the Intermediate CA private key
   become: yes
+  become_user: "{{ user }}"
   shell: > 
     openssl genrsa
     -out {{ ca_dir }}/{{ ca_int_dir }}/private/{{ int_key }}
@@ -10,6 +11,7 @@
 
 - name: Set permissions on Intermediate CA private key
   become: yes
+  become_user: "{{ user }}"
   file:
     path: "{{ ca_dir }}/{{ ca_int_dir }}/private/{{ int_key }}"
     state: file
